# FitMeal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  database.py  docker-compose.yml  gemini_utils.py  local_setup.py  models.py  mongo_db.py  pyproject.toml  requirements.txt  utils.py
app/: __init__.py  auth.py  models.py  routes.py
app/services/: gemini.py  nutrition.py
app/static/css/: custom.css
app/static/js/: script.js
app/templates/: base.html  index_extended.html  login.html  register.html
static/css/: custom.css
static/js/: script.js
templates/: base.html  index.html  index_extended.html  login.html  register.html
