[project]
name = "fitmeal"
version = "1.0.0"
description = "AI-powered nutrition assistant with personalized meal planning"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4.12.0",
]
